<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginBottom="1dp"
    app:cardCornerRadius="8dp"
    app:cardElevation="5dp"
    app:cardPreventCornerOverlap="true"
    app:cardUseCompatPadding="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="20dp"
        android:gravity="center">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/user_avatar_iv"
            android:layout_width="110dp"
            android:layout_height="110dp"
            android:layout_marginHorizontal="1dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/ic_baseline_games_24"
            android:contentDescription="@string/avatar_description"
            android:visibility="visible"
            app:shapeAppearanceOverlay="@style/circleImageView"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        <TextView
            android:id="@+id/username_tv"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_avatar_iv"
            android:layout_alignStart="@id/user_avatar_iv"
            android:layout_alignEnd="@id/user_avatar_iv"
            android:gravity="center"
            android:text="@string/avatar_username"
            android:textStyle="bold"
            android:textSize="11sp"/>

        <TextView
            android:id="@+id/name_tv"
            android:layout_width="90dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/username_tv"
            android:layout_alignStart="@id/username_tv"
            android:layout_alignEnd="@id/username_tv"
            android:gravity="center"
            android:text="@string/avatar_name"
            android:textSize="14sp"/>
    </RelativeLayout>

</androidx.cardview.widget.CardView>